# fire-external-baseline-reproduction

./: .env.example  .gitignore  CHANGELOG.md  README.md  bootstrap_project.py  constraints.txt  pyproject.toml  requirements-dev.txt  requirements-optional-embeddings.txt  requirements-optional-graphrag.txt  requirements.txt
configs/: default.yaml  deterministic_heuristic_smoke.yaml  ekell_controlled_shared_llm.yaml.example  ekell_paper_fidelity_chatglm6b.yaml.example  ekell_style.yaml  graphrag.yaml  llm.yaml.example  llm_deepseek.yaml.example  llm_heuristic.yaml  llm_openai_compatible.yaml.example  llm_qwen.yaml.example  paper_main_run.yaml.example  paper_robustness_run.yaml.example  paper_shared_model.yaml.example  shared_real_model.yaml.example  vanilla_rag.yaml
data/: README.md
docs/: baseline_method_cards.md  baseline_strengths_limitations.md  baseline_tuning_protocol.md  comparison_protocol.md  data_card_template.md  data_license_audit.md  deepeval_handoff_v1.md  dependency_audit_ekell_faithful.md  ekell_logical_reasoning.md  ekell_paper_to_code_matrix.md  ekell_prompt_appendix_mapping.md  ekell_reproduction_spec.md  ekell_vector_retrieval.md  final_experiment_commands.md  firebench_interop_v1_integration.md  interop_integrity_audit.md  limitations.md  manual_evaluation_rubric.md  model_run_card_template.md  no_overclaim_policy.md  official_code_data_search.md  paper_appendix_artifact_checklist.md  paper_experiment_protocol.md  paper_fidelity_vs_controlled_comparison.md  paper_mapping_ekell.md  paper_to_code_fidelity_audit.md  prompt_template_documentation.md  (+9 more)
(+303 files in other folders)
