[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-external-baseline-reproduction"
version = "0.1.0"
description = "Independent external baseline reproduction project for fire emergency decision-support comparison."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
