[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fire-external-baseline-reproduction"
version = "0.2.0"
description = "Independent external baseline reproduction project for fire emergency decision-support comparison."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "build>=1.0.0"]
embeddings = ["text2vec>=1.2.0"]
graphrag = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402", "E501"]

[tool.setuptools.packages.find]
where = ["src"]
